# eYRC-2021_Agribot

./: README.md  connect.bash
tomato_gazebo/: CMakeLists.txt  package.xml
tomato_gazebo/launch/: empty_world.launch  green_house.launch  green_house_final.launch  tomato_plant.launch  tomato_plant_single.launch  tomato_static_plant.launch  wall_follow.launch
tomato_gazebo/models/Aruco_0/: model.sdf
tomato_gazebo/models/Aruco_00/: model.sdf
tomato_gazebo/models/Aruco_01/: model.config  model.sdf
tomato_gazebo/models/Aruco_02/: model.sdf
tomato_gazebo/models/Aruco_03/: model.sdf
tomato_gazebo/models/Aruco_04/: model.sdf
tomato_gazebo/models/Aruco_05/: model.sdf
tomato_gazebo/models/Aruco_06/: model.sdf
tomato_gazebo/models/Aruco_07/: model.sdf
tomato_gazebo/models/Aruco_08/: model.sdf
tomato_gazebo/models/Aruco_09/: model.sdf
tomato_gazebo/models/Aruco_10/: model.sdf
tomato_gazebo/models/Aruco_11/: model.sdf
tomato_gazebo/models/Aruco_12/: model.sdf
tomato_gazebo/models/Aruco_13/: model.sdf
tomato_gazebo/models/Aruco_14/: model.sdf
tomato_gazebo/models/Aruco_15/: model.sdf
tomato_gazebo/models/Aruco_16/: model.sdf
tomato_gazebo/models/Aruco_17/: model.sdf
tomato_gazebo/models/farm1/: model.sdf  (+1 more)
tomato_gazebo/worlds/: aruco_placement.world  b_greenhouse.world  build_greenhouse.world  detach_demo.world  e_greenhouse.world  farm.world  green_house_plants.world  green_house_plants_final.world  greenhouse.world  task3.world  test_spawn.world  tomato_demo.world  tomato_greenhouse.world  tomato_plant.world  trough.world  wall_follow.world
(+147 files in other folders)
